<resources>
    <string name="app_name">Noise Life</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity">Activities</string>
    <string name="button_start_text">Start Service</string>
    <string name="channel_id">PN</string>
    <string name="button_stop_text">Stop Service</string>
    <string name="home_frag_text">Service Panel</string>
    <string name="db_reading">0</string>
    <string name="password">noise4940</string>
    <!-- Preference Titles -->
    <string name="measuring_header">Measuring</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="calibration_title">Calibration constant (dB)</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="measureStopTime_title">Stop time</string>
    <string name="measureStartTime_title">Start time</string>
    <string name="service_scheduling_title">Service Scheduling</string>
    <string name="toggle_calibration_title">Calibration</string>
    <string name="average_interval_title">Averaging Interval</string>
    <string name="db_threshold_title">dB Notification Threshold</string>
    <!-- Preference Titles -->
    <string name="notifications_header">Notifications</string>

    <string name="activity_title">Current Activity</string>
    <string name="activity_header">Select Your Activity</string>
    <string name="custom_activity_title">Custom Activity 1</string>
    <string name="notification_title">Activity Notification Interval</string>
    <string name="threshold_intervals_title">Threshold Intervals</string>

    <!-- Preference Keys -->

    <string name="pref_service_stop">service_stop</string>
    <string name="pref_service_start">service_start</string>
    <string name="pref_interval_len">average_interval_len</string>
    <string name="pref_toggle_calibration">toggle_calibration</string>
    <string name="pref_calibration">calibration</string>
    <string name="pref_toggle_activity_notifs">toggle_activity_notifications</string>
    <string name="pref_activity_notif_interval">notification_interval_len</string>
    <string name="pref_toggle_thresh_notif">toggle_threshold_notifications</string>
    <string name="pref_toggle_thresh_algo">toggle_threshold_algorithm</string>
    <string name="pref_threshold">db_threshold</string>
    <string name="pref_thresh_interval_num">threshold_interval_num</string>
    <string name="pref_toggle_wakeup_notif">toggle_wakeup_notification</string>
    <string name="pref_wakeup_notif_time">wakeup_time</string>
    <string name="pref_auto_activity_list">auto_activity_list</string>
    <string name="prefscreen_activity">activity_screen</string>
    <string name="act_current_activity">current_activity</string>
    <string name="pref_toggle_password">toggle_password</string>
    <string name="pref_settings_password">settings_password</string>
    <string name="act_custom_1">custom_activity_1</string>
    <string name="act_custom_2">custom_activity_2</string>
    <string name="act_custom_3">custom_activity_3</string>
    <string name="pass_button_text">Submit</string>
    <string name="pass_box_hint">Enter Password</string>
    <string name="confirm_button_text">Confirm Selection</string>
    <string name="confirm_key">confirm_button</string>
</resources>

